<resources>
    <string name="app_name">My First App</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="get_text">GET</string>
    <string name="in_text">IN</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="start_putting_text">Start Putting!</string>
    <string name="Begin">Begin!</string>

    <string name="toast_button_text">Wish Me Luck!</string>
    <string name="count_text">Count</string>
    <string name="count_string">0</string>
    <string name="random_heading">Here is a number between 0 and %d.</string>
    <string name="quote1">Practice makes perfect</string>
    <string name="quote2">Never give up</string>
    <string name="quote3">Aim small, miss small</string>
    <string name="quote4">You miss all of the shots you don\'t take</string>
    <string name="quote5">The more you practice the better you get!</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="blank_fragment_label">"Blank Fragment "</string>

    <string name="selected_item">Selected item:</string>
    <string name="number_of_shots">Select number of putts:</string>
    <string name="distance_from_basket">Distance From Basket:</string>
    <string name="made_shot_text">Chains</string>
    <string name="num_shots_remaining">5</string>
    <string name="miss_text">Miss</string>

    <string-array name="number_of_shots">
        <item>5</item>
        <item>10</item>
        <item>15</item>
        <item>20</item>
        <item>50</item>
        <item>100</item>
    </string-array>

    <string-array name="shot_distance">
        <item>5–15ft</item>
        <item>16–25ft</item>
        <item>26–35ft</item>
        <item>36–45ft</item>
        <item>46ft +</item>
        <item>Freestyle</item>
    </string-array>
</resources>
